--- a/app/src/main/res/layout/activity_first_startup.xml
+++ b/app/src/main/res/layout/activity_first_startup.xml
@@ -1,27 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
-        android:id="@+id/txtPoundSign2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="@string/pound_sign"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextBudget"
-        app:layout_constraintEnd_toStartOf="@+id/editTextBudget" />
-
-    <TextView
-        android:id="@+id/welcomeText"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="288dp"
-        android:text="@string/welcome_text"
+        android:text="@string/intro_title"
         android:textColor="@color/budgetBlue"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -30,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvBody"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
@@ -40,7 +28,17 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+    <TextView
+        android:id="@+id/txtPoundSign2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="@string/label_pound_sign"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextBudget"
+        app:layout_constraintEnd_toStartOf="@+id/editTextBudget" />
 
 
     <com.google.android.material.textfield.TextInputEditText
@@ -48,21 +46,20 @@
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:hint="Set a budget"
+        android:hint="@string/hint_set_budget"
         android:inputType="number"
         android:singleLine="true"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
-
-    </com.google.android.material.textfield.TextInputEditText>
+        app:layout_constraintTop_toBottomOf="@+id/tvBody"/>
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Start"
+        android:text="@string/intro_start"
         android:onClick="startButtonPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
